--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="middle-box-container">
             <h3>WEB DESIGN / WEB DEVELOPMENT / SOCIAL MEDIA</h3>
             <h1>DIGITAL TEAM</h1>
-            <hr>
+            <div class="row"></div>
             <div class="anchor">
                 <a href="#">What we do</a>
                 <a href="#">Talk to us</a>
@@ -46,27 +46,27 @@
     <div class="middle-box-title">
         <h1>01</h1>
         <h2>What we do</h2>
-        <hr>
+        <div class="row"></div> 
     </div>
 
     <div class="work">
         <div class="box-1">
             <i class="fas fa-cloud"></i>
             <h2>Web Marketing</h2>
-            <hr>
+            <div class="row"></div>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteu sunt in culpa qui officia.</p>
         </div>
         <div class="box-1">
             <i class="fas fa-tablet-alt"></i>
             <h2>UI & UX DESIGN</h2>
-            <hr>
+            <div class="row"></div>
             <p>Digital Team is free responsive Bootstrap v3.3.5 layout from tooplate. Images are from Pixabay free photo website.</p>
         </div>
         <div class="box-1">
             <i class="fas fa-laptop"></i>
             <h2>ECOMMERCE</h2>
-            <hr>
+            <div class="row"></div>
             <p>You can edit and use this template for your websites. Please tell your friends about Tooplate. Thank you for visiting our website.</p>
         </div>
     </div>
@@ -75,20 +75,20 @@
         <div class="box-1">
             <i class="far fa-clock"></i>
             <h2>MOBILE APP</h2>
-            <hr>
+            <div class="row"></div>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteu sunt in culpa qui officia.</p>
         </div>
         <div class="box-1">
             <i class="far fa-comments"></i>
             <h2>SOCIAL MEDIA</h2>
-            <hr>
+            <div class="row"></div>
             <p>You can easily change icons by looking at ET Line Icons. Excepteu sunt in culpa qui officia. Duis aute irure dolor in reprehenderit.</p>
         </div>
         <div class="box-1">
             <i class="fas fa-laptop-code"></i>
             <h2>RESPONSIVE LAYOUT</h2>
-            <hr>
+            <div class="row"></div>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteu sunt in culpa qui officia.</p>
         </div>
@@ -102,7 +102,7 @@
         <div class="middle-box-title-2">
             <h1>02</h1>
             <h2>Our Agency</h2>
-            <hr>
+            <div class="row"></div>
         </div>
 
         <div class="ag-box-2">
@@ -132,7 +132,7 @@
         <div class="middle-box-title-3">
             <h1>03</h1>
             <h2>Talented Team</h2> 
-            <hr>
+            <div class="row"></div>
         </div>
 
         <div class="img-container">
@@ -151,7 +151,7 @@
         <div class="middle-box-title-4">
             <h1>04</h1>
             <h2>Our Portfolio</h2> 
-            <hr>
+            <div class="row"></div>
         </div>
 
         <nav>
@@ -184,7 +184,7 @@
         <div class="middle-box-title-5">
             <h1>05</h1>
             <h2>Our Price</h2> 
-            <hr>
+            <div class="row"></div>
         </div>
 
         <div class="price-cards">
@@ -241,7 +241,7 @@
         <div class="middle-box-title-6">
             <h1>06</h1>
             <h2>Contact US</h2> 
-            <hr>
+            <div class="row"></div>
         </div>
 
         <div class="content-box">
@@ -284,7 +284,7 @@
 
     <footer>
         <p>Copyright © Digital Team HTML5 Template | Design: Tooplate</p>
-        <hr>
+        <div class="row"></div>
         <ul>
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
